ADD Basic changes to content

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <body>
     <main>
       <header class="full-height cnt-pos flex-column header header-bg">
-        <div class="header-preheight"></div>
         <div class="container">
-          <h1 class="header-title">If you don't like my code</h1>
-          <h3 class="header-description">At least you get a cute picture of an avocado</h3>
-          <button class="btn mt-6">HIRE ME</button>
+          <h1>Ines Castelltort</h1>
+          <p class="header-des">AI find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
+          <button class="btn mt-5">Get in touch </button>
         </div>
       </header>
     </main>
