--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="full-height cnt-pos flex-column header header-bg">
         <div class="container">
           <h1>Ines Castelltort</h1>
-          <p class="header-des">AI find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
+          <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
           <button class="btn mt-5">Get in touch </button>
         </div>
       </header>
