UPDATE header style

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
     <main>
       <header class="full-height cnt-pos flex-column header header-bg">
         <div class="container">
-          <h1>Ines Castelltort</h1>
+          <h1>Hi there, I'm <span>Ines Castelltort</span></h1>
           <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
           <button class="btn mt-5">Get in touch </button>
         </div>
       </header>
+      <section class="full-height cnt-pos flex-column header">
+        <div class="container">
+          <h1>Background</h1>
+          <p class="header-des">Everyone has two sides, mine is a creative technical hybrid</p>
+        </div>
+      </section>
     </main>
     <script src="main.js"></script>
   </body>
