--- a/index.html
+++ b/index.html
@@ -13,15 +13,33 @@
     <main>
       <header class="full-height cnt-pos flex-column header header-bg">
         <div class="container">
-          <h1>Hi there, I'm <span>Ines Castelltort</span></h1>
-          <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
-          <button class="btn mt-5">Get in touch </button>
+          <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
+          <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope I don't disappoint you.</p>
+          <p class="header-cta">You can always skip the stalking part and</p>
+          <button class="btn mt-3"> ask to meet </button>
         </div>
       </header>
-      <section class="full-height cnt-pos flex-column header">
+      <section class="min-full-height cnt-pos flex-column header">
         <div class="container">
-          <h1>Background</h1>
+          <h2>Double Background</h2>
           <p class="header-des">Everyone has two sides, mine is a creative technical hybrid</p>
+          <div>
+            <div class="grey-bg">
+              <h3>Techie</h3>
+              <ul>
+                <li><b>2019: </b>IronHack Hackshow winner with <span>Unpopular Opinion</span></li>
+                <li><b>2019: </b>IronHack Hackathon winner with <span>Emergency Services</span></li>
+                <li><b>2017: </b>1st Entrepreneur Woman Award at Emprèn UPC (Yuzz) with <span>WeSpo</span></li>
+                <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li>
+                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mid-height cnt-pos flex-column header header-bg">
+        <div class="container">
+          <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
         </div>
       </section>
     </main>
