--- a/index.html
+++ b/index.html
@@ -21,23 +21,38 @@
       </header>
       <section class="min-full-height cnt-pos flex-column header">
         <div class="container">
-          <h2>Double Background</h2>
-          <p class="header-des">Everyone has two sides, mine is a creative technical hybrid</p>
-          <div>
+          <h2 class="pt-4">Double Background</h2>
+          <p class="header-des">Everyone has two sides, mine is a creative technical cocktail</p>
+          <div class="experience">
             <div class="grey-bg">
               <h3>Techie</h3>
               <ul>
+                <li><b>2019: </b>Web Developer at <span>Rica Design</span></li>
+                <li><b>2019: </b>Web Development Bootcamp at <span>IronHack</span></li>
                 <li><b>2019: </b>IronHack Hackshow winner with <span>Unpopular Opinion</span></li>
                 <li><b>2019: </b>IronHack Hackathon winner with <span>Emergency Services</span></li>
+                <li><b>2016-2018: </b>CEO and Digital Expert at <span>Wixpers</span></li>
                 <li><b>2017: </b>1st Entrepreneur Woman Award at Emprèn UPC (Yuzz) with <span>WeSpo</span></li>
                 <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li>
-                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span></li>
+                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span> technological contest of the Generalitat de Catalunya</li>
+              </ul>
+            </div>
+            <div class="grey-bg">
+              <h3>Creative</h3>
+              <ul>
+                <li><b>2018: </b>Premi Extraordinari de la <span>Universitat de Barcelona</span></li>
+                <li><b>2016-2018: </b>Creative Director at <span>Rica Design</span></li>
+                <li><b>2016: </b>Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
+                <li><b>2015: </b>Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
+                <li><b>2015: </b>Public Relations Trainee <span>Mcann Erickson</span></li>
+                <li><b>2015: </b>Project Manager Assistant at <span>Dogwood</span></li>
+                <li><b>2014-2015: </b>Social Media Copywriter for Nissan at <span>Arista</span></li>
               </ul>
             </div>
           </div>
         </div>
       </section>
-      <section class="mid-height cnt-pos flex-column header header-bg">
+      <section class="third-height cnt-pos flex-column header header-bg">
         <div class="container">
           <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
         </div>
