ADD link to mail

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
           <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
           <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope I don't disappoint you.</p>
           <p class="header-cta">You can always skip the stalking part and</p>
-          <button class="btn mt-3"> ask to meet </button>
+          <div class="mt-6">
+            <a class="btn" href="mailto:ines.today@gmail.com">ask to meet</a>  
+          </div>
+          <!-- <button class="btn mt-3"> ask to meet </button> -->
         </div>
       </header>
       <section class="min-full-height cnt-pos flex-column header">
@@ -54,7 +57,7 @@
       </section>
       <section class="third-height cnt-pos flex-column header header-bg">
         <div class="container">
-          <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating—A challenge to wake up to.</p>
+          <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating — A challenge to wake up to.</p>
         </div>
       </section>
     </main>
