UPDATE Hackathon info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><b>2019: </b>Web Developer at <span>Rica Design</span></li>
                 <li><b>2019: </b>Web Development Bootcamp at <span>IronHack</span></li>
                 <li><b>2019: </b>IronHack Hackshow winner with <span>Unpopular Opinion</span></li>
-                <li><b>2019: </b>IronHack Hackathon winner with <span>Emergency Services</span></li>
+                <li><b>2019: </b>IronHack Hackathon's most voted project with <span>Emergency Services</span></li>
                 <li><b>2016-2018: </b>CEO and Digital Expert at <span>Wixpers</span></li>
                 <li><b>2017: </b>1st Entrepreneur Woman Award at Emprèn UPC (Yuzz) with <span>WeSpo</span></li>
                 <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li>
