UPDATE not a boring header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           <div class="mt-6">
             <a class="btn" href="mailto:ines.today@gmail.com">ask to meet</a>  
           </div>
-          <!-- <button class="btn mt-3"> ask to meet </button> -->
+          <div class="scroll">
+            <img src="./images/scroll-down-arrow-icon.png" alt="scroll">
+          </div>
         </div>
       </header>
       <section class="min-full-height cnt-pos flex-column header">
@@ -44,7 +46,7 @@
               <h3>Creative</h3>
               <ul>
                 <li><b>2018: </b>Premi Extraordinari de la <span>Universitat de Barcelona</span></li>
-                <li><b>2016-2018: </b>Creative Director at <span>Rica Design</span></li>
+                <li><b>2016-2018: </b>Frem Creative Director at <span>Rica Design</span></li>
                 <li><b>2016: </b>Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
                 <li><b>2015: </b>Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
                 <li><b>2015: </b>Public Relations Trainee <span>Mcann Erickson</span></li>
