--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="full-height cnt-pos flex-column header header-bg">
         <div class="container">
           <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
-          <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope I don't disappoint you.</p>
+          <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope not to disappoint you.</p>
           <p class="header-cta">You can always skip the stalking part and</p>
           <div class="mt-6">
             <a class="btn" href="mailto:ines.today@gmail.com">ask to meet</a>  
@@ -26,10 +26,10 @@
       </header>
       <section class="min-full-height cnt-pos flex-column header">
         <div class="container">
-          <h2 class="pt-4">Double Background</h2>
-          <p class="header-des">Everyone has two sides, mine is a creative technical cocktail</p>
+          <h2 class="pt-5">Double Background:</h2>
+          <p class="header-des">Everyone has two sides, I would define myself as a <b>creative techie</b></p>
           <div class="experience">
-            <div class="grey-bg">
+            <div class="softviolet-bg">
               <h3>Techie</h3>
               <ul>
                 <li><b>2019: </b>Web Developer at <span>Rica Design</span></li>
@@ -38,15 +38,15 @@
                 <li><b>2019: </b>IronHack Hackathon's most voted project with <span>Emergency Services</span></li>
                 <li><b>2016-2018: </b>CEO and Digital Expert at <span>Wixpers</span></li>
                 <li><b>2017: </b>1st Entrepreneur Woman Award at Emprèn UPC (Yuzz) with <span>WeSpo</span></li>
-                <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li>
-                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span> technological contest of the Generalitat de Catalunya</li>
+                <!-- <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li> -->
+                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span>, technological contest of the Generalitat de Catalunya</li>
               </ul>
             </div>
             <div class="grey-bg">
               <h3>Creative</h3>
               <ul>
-                <li><b>2018: </b>Premi Extraordinari de la <span>Universitat de Barcelona</span></li>
-                <li><b>2016-2018: </b>Frem Creative Director at <span>Rica Design</span></li>
+                <li><b>2018: </b><i>Premi Extraordinari</i> by <span>Universitat de Barcelona</span></li>
+                <li><b>2016-2018: </b>From Creative Director to Marketing Director at <span>Rica Design</span></li>
                 <li><b>2016: </b>Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
                 <li><b>2015: </b>Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
                 <li><b>2015: </b>Public Relations Trainee <span>Mcann Erickson</span></li>
@@ -56,6 +56,28 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="d-flex flex-row">
+        <div class="knowledge cnt-pos flex-column">
+          <h2>What I know</h2>
+          <h3 class="color-grey mb-3">I mean, what I'm coding in</h3>
+          <ul id="knowledge-list" class="d-flex flex-wrap">
+            <li>HTML5 & CSS3</li>
+            <li>Vanilla Javascript (ES5 & ES6)</li>
+            <li>React (with hooks)</li>
+            <li>Node</li>
+            <li>Express</li>
+            <li>MobX</li>
+            <li>MongoDB</li>
+            <li>SASS</li>
+          </ul>
+          <h3 class="color-grey mt-3 mb-3">And currently learning</h3>
+          <ul id="knowledge-list" class="d-flex flex-wrap">
+            <li>React Native</li>
+            <li>PHP</li>
+          </ul>
+        </div>
+        <div class="ines-bg"></div>
       </section>
       <section class="third-height cnt-pos flex-column header header-bg">
         <div class="container">
