--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       </header>
-      <section class="min-full-height cnt-pos flex-column header">
+      <section class="mt-3 mb-5 cnt-pos flex-column header">
         <div class="container">
           <h2 class="pt-5">Double Background:</h2>
           <p class="header-des">Everyone has two sides, I would define myself as a <b>creative techie</b></p>
@@ -71,7 +71,7 @@
             <li>MongoDB</li>
             <li>SASS</li>
           </ul>
-          <h3 class="color-grey mt-3 mb-3">And currently learning</h3>
+          <h3 class="color-grey mt-3 mb-3">and currently learning...</h3>
           <ul id="knowledge-list" class="d-flex flex-wrap">
             <li>React Native</li>
             <li>PHP</li>
