--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   <body>
     <main>
-      <header class="full-height cnt-pos flex-column header header-bg">
+      <header class="full-height cnt-pos flex-column header-bg">
         <div class="container">
           <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
           <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope not to disappoint you.</p>
@@ -24,7 +24,7 @@
           </div>
         </div>
       </header>
-      <section class="mt-3 mb-5 cnt-pos flex-column header">
+      <section class="mt-3 mb-5 cnt-pos flex-column">
         <div class="container">
           <h2 class="pt-5">Double Background:</h2>
           <p class="header-des">Everyone has two sides, I would define myself as a <b>creative techie</b></p>
@@ -79,11 +79,14 @@
         </div>
         <div class="ines-bg"></div>
       </section>
-      <section class="third-height cnt-pos flex-column header header-bg">
+      <footer class="cnt-pos flex-column header-bg">
         <div class="container">
           <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating — A challenge to wake up to.</p>
+          <div class="mt-4">
+            <a class="btn" href="mailto:ines.today@gmail.com">Contact me</a>  
+          </div>
         </div>
-      </section>
+      </footer>
     </main>
     <script src="main.js"></script>
   </body>
