--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li>React (with hooks)</li>
             <li>Node</li>
             <li>Express</li>
+            <li>Python</li>
             <li>MobX</li>
             <li>MongoDB</li>
             <li>SASS</li>
