--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
             <li>HTML5 & CSS3</li>
             <li>Vanilla Javascript (ES5 & ES6)</li>
             <li>React (with hooks)</li>
+            <li>Vue</li>
             <li>Node</li>
             <li>Express</li>
             <li>Python</li>
             <li>MobX</li>
             <li>MongoDB</li>
+            <li>Serverless Applications (AWS)</li>
             <li>SASS</li>
           </ul>
           <h3 class="color-grey mt-3 mb-3">and currently learning...</h3>
