ADD work as a Customer Engineer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="softviolet-bg">
               <h3>Techie</h3>
               <ul>
+                <li><b>2019: </b>Customer Engineer at <span>Spacebosot</span></li>
                 <li><b>2019: </b>Web Developer at <span>Rica Design</span></li>
                 <li><b>2019: </b>Web Development Bootcamp at <span>IronHack</span></li>
                 <li><b>2019: </b>IronHack Hackshow winner with <span>Unpopular Opinion</span></li>
