ADD start code_version

--- a/index.html
+++ b/index.html
@@ -6,25 +6,292 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Ines Castelltort</title>
+  <title>Ines Castelltort - Website</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
   <body>
     <main>
-      <header class="full-height cnt-pos flex-column header-bg">
+      <header class="cnt-pos flex-column header-bg">
         <div class="container">
           <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
-          <p class="header-des">You might be investigating who am I and if I'm worthy to work at your company, I hope not to disappoint you.</p>
+          <p class="header-des">Are you ready to code along with me?</p>
           <p class="header-cta">You can always skip the stalking part and</p>
           <div class="mt-6">
             <a class="btn" href="mailto:ines.today@gmail.com">ask to meet</a>  
           </div>
-          <div class="scroll">
+          <a href="#code" class="scroll">
             <img src="./images/scroll-down-arrow-icon.png" alt="scroll">
-          </div>
+          </a>
         </div>
       </header>
-      <section class="mt-3 mb-5 cnt-pos flex-column">
+      <section id="code" class="code-structure">
+        <div class="coding-lines">
+          <p>
+          1
+          <br>2
+          <br>3
+          <br>4
+          <br>5
+          <br>6
+          <br>7
+          <br>8
+          <br>9
+          <br>10
+          <br>11
+          <br>12
+          <br>13
+          <br>14
+          <br>15
+          <br>16
+          <br>17
+          <br>18
+          <br>19
+          <br>20
+          <br>21
+          <br>22
+          <br>23
+          <br>24
+          <br>25
+          <br>26
+          <br>27
+          <br>28
+          <br>29
+          <br>30
+          <br>31
+          <br>32
+          <br>33
+          <br>34
+          <br>35
+          <br>36
+          <br>37
+          <br>38
+          <br>39
+          <br>40
+          <br>41
+          <br>42
+          <br>43
+          <br>44
+          <br>45
+          <br>46
+          <br>47
+          <br>48
+          <br>49
+          <br>50
+          <br>51
+          <br>52
+          <br>53
+          <br>54
+          <br>55
+          <br>56
+          <br>57
+          <br>58
+          <br>59
+          <br>60
+          <br>61
+          <br>62
+          <br>63
+          <br>64
+          <br>65
+          <br>66
+          <br>67
+          <br>68
+          <br>69
+          <br>70
+          <br>71
+          <br>72
+          <br>73
+          <br>74
+          <br>75
+          <br>76
+          <br>77
+          <br>78
+          <br>79
+          <br>80
+          <br>81
+          <br>82
+          <br>83
+          <br>84
+          <br>85
+          <br>86
+          <br>87
+          <br>88
+          <br>89
+          <br>90
+          <br>91
+          <br>92
+          <br>93
+          <br>94
+          <br>95
+          <br>96
+          <br>97
+          <br>98
+          <br>99
+          <br>100</p>
+        </div>
+        <div class="coding-topics">
+          <h3 class="comment">// Tech experience </h3>
+          <br>
+          <div class="typewriter">
+            <p class="comment">// Tech experience </p>
+          </div>
+          <ul>
+            <li><code class="dark-blue">let </code><code class="light-blue">rocket_digital</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Ecommerce Tech Lead"</code>, <code class="green">2020</code>, <code class="red">"Today"</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">spaceboost</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Software Engineer"</code>, <code class="green">2019</code>, <code class="green">2020</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">rica_design</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Web Developer"</code>, <code class="green">2019</code>, <code class="green">2019</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">ironhack</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Web Development Bootcamp"</code>, <code class="green">2018</code>, <code class="green">2019</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">wixpers</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"CEO and Digital Expert"</code>, <code class="green">2016</code>, <code class="green">2018</code><code class="pink">)</code>;</li>
+          </ul>
+          <br>
+          <!-- START Function code -->
+          <p><code class="dark-blue">function</code><code class="light-yellow"> experienceGained<code class="dark-yellow">(</code></code><code class="light-blue-no">position</code>, <code class="light-blue">start_year</code>, <code class="light-blue">end_year</code><code class="dark-yellow">) {</code></p>
+            <p class="indent"><code class="dark-blue">let </code><code class="light-blue">experience_time</code> = <code class="light-blue">end_year</code> - <code class="light-blue">start_year</code>;</p>
+            <p class="indent"><code class="purple">return</code> <code class="light-blue">experience_time</code></p>
+          <p><code class="dark-yellow">}</code></p>
+          <p><code class="output">// expected output: 1, 2 or 3</code></p>
+          <!-- END Function code -->
+          <br>
+          <p class="comment">// Tech awards </p>
+          <ul>
+            <li><code class="dark-blue">let </code><code class="light-blue">hackshow_winner</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"IronHack Final HackShow Winner"</code>, <code class="green">2019</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">hackathon_winner</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"IronHack Hackathon Most Voted Project"</code>, <code class="green">2019</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">empren_upc_woman_winner</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"1st Entrepreneur Woman Award at <i>Emprèn UPC (Yuzz)</i></code>, <code class="green">2017</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">empren_upc_general</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"3rd <i>Emprèn UPC (Yuzz)</i> Award at <i></i></code>, <code class="green">2017</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">government_contest</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"2nd at <i>El Recorregut de l'Energia, Generalitat de Catalunya</i>"</code>, <code class="green">2007</code> && <code class="green">2008</code><code class="pink">)</code>;</li>
+          </ul>
+          <br>
+          <!-- START Function code -->
+          <p><code class="dark-blue">function</code><code class="light-yellow"> award<code class="dark-yellow">(</code></code><code class="light-blue">award_name</code>, <code class="light-blue-no">year</code><code class="dark-yellow">) {</code></p>
+            <p class="indent"><code class="dark-blue">let </code><code class="light-blue">congrats</code> = <code class="light-blue">award_name</code>.<code class="light-yellow">concat</code><code class="pink">(</code><code class="red">"? "</code>, <code class="red">"Well done!</code><code class="pink">)</code>;</p>
+            <p class="indent"><code class="purple">return</code> <code class="light-blue">congrats</code></p>
+          <p><code class="dark-yellow">}</code></p>
+          <p><code class="output">// expected output: 1rst Entrepreneur Woman Award? Well done!</code></p>
+          <!-- END Function code -->
+
+          <h3 class="comment">// Creative CV </h3>
+          <br>
+          <ul>
+            <li><b>2018 </b>= <i>Premi Extraordinari</i> by <span>Universitat de Barcelona</span></li>
+            <li><b>2016-2018 </b>= From Creative Director to Marketing Director at <span>Rica Design</span></li>
+            <li><b>2016 </b>= Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
+            <li><b>2015 </b>= Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
+            <li><b>2015 </b>= Public Relations Trainee <span>Mcann Erickson</span></li>
+            <li><b>2015 </b>= Project Manager Assistant at <span>Dogwood</span></li>
+            <li><b>2014-2015 </b>= Social Media Copywriter for Nissan at <span>Arista</span></li>
+          </ul>
+          <br>
+          <p class="light-yellow">This is a test text to test color</p>
+          <p class="dark-yellow">This is a test text to test color</p>
+          <p class="orange">This is a test text to test color</p>
+          <p class="red">This is a test text to test color</p>
+          <p class="light-blue">This is a test text to test color</p>
+          <p class="dark-blue">This is a test text to test color</p>
+          <p class="green">This is a test text to test color</p>
+          <p class="comment">This is a test text to test color</p>
+          <p class="purple">This is a test text to test color</p>
+          <p class="pink">This is a test text to test color</p>
+          <p>1</p>
+          <br>2
+          <br>3
+          <br>4
+          <br>5
+          <br>6
+          <br>7
+          <br>8
+          <br>9
+          <br>10
+          <br>11
+          <br>12
+          <br>13
+          <br>14
+          <br>15
+          <br>16
+          <br>17
+          <br>18
+          <br>19
+          <br>20
+          <br>21
+          <br>22
+          <br>23
+          <br>24
+          <br>25
+          <br>26
+          <br>27
+          <br>28
+          <br>29
+          <br>30
+          <br>31
+          <br>32
+          <br>33
+          <br>34
+          <br>35
+          <br>36
+          <br>37
+          <br>38
+          <br>39
+          <br>40
+          <br>41
+          <br>42
+          <br>43
+          <br>44
+          <br>45
+          <br>46
+          <br>47
+          <br>48
+          <br>49
+          <br>50
+          <br>51
+          <br>52
+          <br>53
+          <br>54
+          <br>55
+          <br>56
+          <br>57
+          <br>58
+          <br>59
+          <br>60
+          <br>61
+          <br>62
+          <br>63
+          <br>64
+          <br>65
+          <br>66
+          <br>67
+          <br>68
+          <br>69
+          <br>70
+          <br>71
+          <br>72
+          <br>73
+          <br>74
+          <br>75
+          <br>76
+          <br>77
+          <br>78
+          <br>79
+          <br>80
+          <br>81
+          <br>82
+          <br>83
+          <br>84
+          <br>85
+          <br>86
+          <br>87
+          <br>88
+          <br>89
+          <br>90
+          <br>91
+          <br>92
+          <br>93
+          <br>94
+          <br>95
+          <br>96
+          <br>97
+          <br>98
+          <br>99
+          <br>100</p>
+        </div>   
+      </section>
+      <section id="experience" class="mt-3 mb-5 cnt-pos flex-column">
         <div class="container">
           <h2 class="pt-5">Double Background:</h2>
           <p class="header-des">Everyone has two sides, I would define myself as a <b>creative techie</b></p>
@@ -95,4 +362,3 @@
     <script src="main.js"></script>
   </body>
 </html>
-
