ADD Dynamic lines of code

--- a/index.html
+++ b/index.html
@@ -9,126 +9,16 @@
   <title>Ines Castelltort - Website</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-  <body>
+  <body onload="createNumbers();">
     <main>
-      <header class="cnt-pos flex-column header-bg">
-        <div class="container">
-          <h1>Hi there! I'm <span>Ines Castelltort</span></h1>
-          <p class="header-des">Are you ready to code along with me?</p>
-          <p class="header-cta">You can always skip the stalking part and</p>
-          <div class="mt-6">
-            <a class="btn" href="mailto:ines.today@gmail.com">ask to meet</a>  
-          </div>
-          <a href="#code" class="scroll">
-            <img src="./images/scroll-down-arrow-icon.png" alt="scroll">
-          </a>
-        </div>
+      <header class="header full-height left-cnt-pos flex-column">
+        <h1 class="big-letters" >Hi there! <br>I'm <a href="https://www.linkedin.com/in/inescv/" target="_blank">Ines Castelltort</a></h1>
+        <p class="big-letters">Are you ready to <a href="#code">code along</a>?</p>
+        <p class="medium-letters">You can always skip the stalking part and <a href="mailto:ines.today@gmail.com">ask to meet</a></p>
       </header>
       <section id="code" class="code-structure">
-        <div class="coding-lines">
-          <p>
-          1
-          <br>2
-          <br>3
-          <br>4
-          <br>5
-          <br>6
-          <br>7
-          <br>8
-          <br>9
-          <br>10
-          <br>11
-          <br>12
-          <br>13
-          <br>14
-          <br>15
-          <br>16
-          <br>17
-          <br>18
-          <br>19
-          <br>20
-          <br>21
-          <br>22
-          <br>23
-          <br>24
-          <br>25
-          <br>26
-          <br>27
-          <br>28
-          <br>29
-          <br>30
-          <br>31
-          <br>32
-          <br>33
-          <br>34
-          <br>35
-          <br>36
-          <br>37
-          <br>38
-          <br>39
-          <br>40
-          <br>41
-          <br>42
-          <br>43
-          <br>44
-          <br>45
-          <br>46
-          <br>47
-          <br>48
-          <br>49
-          <br>50
-          <br>51
-          <br>52
-          <br>53
-          <br>54
-          <br>55
-          <br>56
-          <br>57
-          <br>58
-          <br>59
-          <br>60
-          <br>61
-          <br>62
-          <br>63
-          <br>64
-          <br>65
-          <br>66
-          <br>67
-          <br>68
-          <br>69
-          <br>70
-          <br>71
-          <br>72
-          <br>73
-          <br>74
-          <br>75
-          <br>76
-          <br>77
-          <br>78
-          <br>79
-          <br>80
-          <br>81
-          <br>82
-          <br>83
-          <br>84
-          <br>85
-          <br>86
-          <br>87
-          <br>88
-          <br>89
-          <br>90
-          <br>91
-          <br>92
-          <br>93
-          <br>94
-          <br>95
-          <br>96
-          <br>97
-          <br>98
-          <br>99
-          <br>100</p>
-        </div>
-        <div class="coding-topics">
+        <div id="coding-lines" class="coding-lines"></div>
+        <div id="coding-content" class="coding-topics">
           <h3 class="comment">// Tech experience </h3>
           <br>
           <div class="typewriter">
@@ -166,6 +56,8 @@
           <p><code class="dark-yellow">}</code></p>
           <p><code class="output">// expected output: 1rst Entrepreneur Woman Award? Well done!</code></p>
           <!-- END Function code -->
+          <p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>
+          <br>
 
           <h3 class="comment">// Creative CV </h3>
           <br>
@@ -178,7 +70,7 @@
             <li><b>2015 </b>= Project Manager Assistant at <span>Dogwood</span></li>
             <li><b>2014-2015 </b>= Social Media Copywriter for Nissan at <span>Arista</span></li>
           </ul>
-          <br>
+          <p></p>
           <p class="light-yellow">This is a test text to test color</p>
           <p class="dark-yellow">This is a test text to test color</p>
           <p class="orange">This is a test text to test color</p>
@@ -189,106 +81,7 @@
           <p class="comment">This is a test text to test color</p>
           <p class="purple">This is a test text to test color</p>
           <p class="pink">This is a test text to test color</p>
-          <p>1</p>
-          <br>2
-          <br>3
-          <br>4
-          <br>5
-          <br>6
-          <br>7
-          <br>8
-          <br>9
-          <br>10
-          <br>11
-          <br>12
-          <br>13
-          <br>14
-          <br>15
-          <br>16
-          <br>17
-          <br>18
-          <br>19
-          <br>20
-          <br>21
-          <br>22
-          <br>23
-          <br>24
-          <br>25
-          <br>26
-          <br>27
-          <br>28
-          <br>29
-          <br>30
-          <br>31
-          <br>32
-          <br>33
-          <br>34
-          <br>35
-          <br>36
-          <br>37
-          <br>38
-          <br>39
-          <br>40
-          <br>41
-          <br>42
-          <br>43
-          <br>44
-          <br>45
-          <br>46
-          <br>47
-          <br>48
-          <br>49
-          <br>50
-          <br>51
-          <br>52
-          <br>53
-          <br>54
-          <br>55
-          <br>56
-          <br>57
-          <br>58
-          <br>59
-          <br>60
-          <br>61
-          <br>62
-          <br>63
-          <br>64
-          <br>65
-          <br>66
-          <br>67
-          <br>68
-          <br>69
-          <br>70
-          <br>71
-          <br>72
-          <br>73
-          <br>74
-          <br>75
-          <br>76
-          <br>77
-          <br>78
-          <br>79
-          <br>80
-          <br>81
-          <br>82
-          <br>83
-          <br>84
-          <br>85
-          <br>86
-          <br>87
-          <br>88
-          <br>89
-          <br>90
-          <br>91
-          <br>92
-          <br>93
-          <br>94
-          <br>95
-          <br>96
-          <br>97
-          <br>98
-          <br>99
-          <br>100</p>
+          <br>
         </div>   
       </section>
       <section id="experience" class="mt-3 mb-5 cnt-pos flex-column">
