ADD Typewritter effect header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body onload="createNumbers();">
     <main>
       <header class="header full-height left-cnt-pos flex-column">
-        <h1 class="big-letters" >Hi there! <br>I'm <a href="https://www.linkedin.com/in/inescv/" target="_blank">Ines Castelltort</a></h1>
+        <p id="presentation" class="big-letters" >Bienvenido!</p>
+        <h1 class="big-letters">I'm <a href="https://www.linkedin.com/in/inescv/" target="_blank">Ines Castelltort</a></h1>
         <p class="big-letters">Are you ready to <a href="#code">code along</a>?</p>
         <p class="medium-letters">You can always skip the stalking part and <a href="mailto:ines.today@gmail.com">ask to meet</a></p>
       </header>
