--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
         <h1 class="big-letters">I'm <a href="https://www.linkedin.com/in/inescv/" target="_blank">Ines Castelltort</a></h1>
         <p class="big-letters">Are you ready to <a href="#code">code along</a>?</p>
         <p class="medium-letters">You can always skip the stalking part and <a href="mailto:ines.today@gmail.com">ask to meet</a></p>
+        <a href="#code" class="scroll">&#8964;</a>
       </header>
       <section id="code" class="code-structure">
         <div id="coding-lines" class="coding-lines"></div>
         <div id="coding-content" class="coding-topics">
-          <h3 class="comment">// Tech experience </h3>
           <br>
-          <div class="typewriter">
-            <p class="comment">// Tech experience </p>
-          </div>
+          <h3 class="comment">// Tech experience </h3>
           <ul>
             <li><code class="dark-blue">let </code><code class="light-blue">rocket_digital</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Ecommerce Tech Lead"</code>, <code class="green">2020</code>, <code class="red">"Today"</code><code class="pink">)</code>;</li>
             <li><code class="dark-blue">let </code><code class="light-blue">spaceboost</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Software Engineer"</code>, <code class="green">2019</code>, <code class="green">2020</code><code class="pink">)</code>;</li>
@@ -33,9 +31,19 @@
             <li><code class="dark-blue">let </code><code class="light-blue">wixpers</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"CEO and Digital Expert"</code>, <code class="green">2016</code>, <code class="green">2018</code><code class="pink">)</code>;</li>
           </ul>
           <br>
+          <h3 class="comment">// Creative experience </h3>
+          <ul>
+            <li><code class="dark-blue">let </code><code class="light-blue">rica_design</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Creative Director"</code>, <code class="green">2016</code>, <code class="green">2018</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">subasta_de_ocio</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Creative Marketing Content Specialist"</code>, <code class="green">2015</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">mcann_erkison</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Public Relations Trainee"</code>, <code class="green">2015</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">dogwood</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Project Manager Assistant"</code>, <code class="green">2015</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">arista</code> = <code class="light-yellow">experienceGained</code><code class="pink">(</code><code class="red">"Social Media Copywriter for Nissan"</code>, <code class="green">2014</code>, <code class="green">2015</code><code class="pink">)</code>;</li>
+          </ul>
+          <br>
           <!-- START Function code -->
-          <p><code class="dark-blue">function</code><code class="light-yellow"> experienceGained<code class="dark-yellow">(</code></code><code class="light-blue-no">position</code>, <code class="light-blue">start_year</code>, <code class="light-blue">end_year</code><code class="dark-yellow">) {</code></p>
+          <p><code class="dark-blue">function</code><code class="light-yellow"> experienceGained</code><code class="dark-yellow">(</code></code><code class="light-blue-no">position</code>, <code class="light-blue">start_year</code>, <code class="light-blue">end_year</code><code class="dark-yellow">) {</code></p>
             <p class="indent"><code class="dark-blue">let </code><code class="light-blue">experience_time</code> = <code class="light-blue">end_year</code> - <code class="light-blue">start_year</code>;</p>
+            <p class="indent"><code class="light-blue">console</code>.<code class="light-yellow">log</code><code class="dark-yellow">(</code><code class="light-blue">position</code> + <code class="red">"? Great place!"</code><code class="dark-yellow">)</code></p>
             <p class="indent"><code class="purple">return</code> <code class="light-blue">experience_time</code></p>
           <p><code class="dark-yellow">}</code></p>
           <p><code class="output">// expected output: 1, 2 or 3</code></p>
@@ -50,6 +58,12 @@
             <li><code class="dark-blue">let </code><code class="light-blue">government_contest</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"2nd at <i>El Recorregut de l'Energia, Generalitat de Catalunya</i>"</code>, <code class="green">2007</code> && <code class="green">2008</code><code class="pink">)</code>;</li>
           </ul>
           <br>
+          <p class="comment">// Creative awards </p>
+          <ul>
+            <li><code class="dark-blue">let </code><code class="light-blue">universitat_barcelona_award</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"Premi Extraordinari de la Universitat de Barcelona"</code>, <code class="green">2018</code><code class="pink">)</code>;</li>
+            <li><code class="dark-blue">let </code><code class="light-blue">universitat_barcelona_career</code> = <code class="light-yellow">award</code><code class="pink">(</code><code class="red">"Graduated with honors in Advertising and Public Relations"</code>, <code class="green">2016</code><code class="pink">)</code>;</li>
+          </ul>
+          <br>
           <!-- START Function code -->
           <p><code class="dark-blue">function</code><code class="light-yellow"> award<code class="dark-yellow">(</code></code><code class="light-blue">award_name</code>, <code class="light-blue-no">year</code><code class="dark-yellow">) {</code></p>
             <p class="indent"><code class="dark-blue">let </code><code class="light-blue">congrats</code> = <code class="light-blue">award_name</code>.<code class="light-yellow">concat</code><code class="pink">(</code><code class="red">"? "</code>, <code class="red">"Well done!</code><code class="pink">)</code>;</p>
@@ -57,94 +71,47 @@
           <p><code class="dark-yellow">}</code></p>
           <p><code class="output">// expected output: 1rst Entrepreneur Woman Award? Well done!</code></p>
           <!-- END Function code -->
-          <p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>
           <br>
-
-          <h3 class="comment">// Creative CV </h3>
-          <br>
-          <ul>
-            <li><b>2018 </b>= <i>Premi Extraordinari</i> by <span>Universitat de Barcelona</span></li>
-            <li><b>2016-2018 </b>= From Creative Director to Marketing Director at <span>Rica Design</span></li>
-            <li><b>2016 </b>= Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
-            <li><b>2015 </b>= Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
-            <li><b>2015 </b>= Public Relations Trainee <span>Mcann Erickson</span></li>
-            <li><b>2015 </b>= Project Manager Assistant at <span>Dogwood</span></li>
-            <li><b>2014-2015 </b>= Social Media Copywriter for Nissan at <span>Arista</span></li>
-          </ul>
-          <p></p>
-          <p class="light-yellow">This is a test text to test color</p>
-          <p class="dark-yellow">This is a test text to test color</p>
-          <p class="orange">This is a test text to test color</p>
-          <p class="red">This is a test text to test color</p>
-          <p class="light-blue">This is a test text to test color</p>
-          <p class="dark-blue">This is a test text to test color</p>
-          <p class="green">This is a test text to test color</p>
-          <p class="comment">This is a test text to test color</p>
-          <p class="purple">This is a test text to test color</p>
-          <p class="pink">This is a test text to test color</p>
+          <p class="light-yellow">Keep scrolling to see tech stack</p>
+          <p class="dark-yellow">Keep scrolling to see tech stack</p>
+          <p class="orange">Keep scrolling to see tech stack</p>
+          <p class="red">Keep scrolling to see tech stack</p>
+          <p class="light-blue">Keep scrolling to see tech stack</p>
+          <p class="dark-blue">Keep scrolling to see tech stack</p>
+          <p class="green">Keep scrolling to see tech stack</p>
+          <p class="comment">Keep scrolling to see tech stack</p>
+          <p class="purple">Keep scrolling to see tech stack</p>
+          <p class="pink">Keep scrolling to see tech stack</p>
           <br>
         </div>   
       </section>
-      <section id="experience" class="mt-3 mb-5 cnt-pos flex-column">
-        <div class="container">
-          <h2 class="pt-5">Double Background:</h2>
-          <p class="header-des">Everyone has two sides, I would define myself as a <b>creative techie</b></p>
-          <div class="experience">
-            <div class="softviolet-bg">
-              <h3>Techie</h3>
-              <ul>
-                <li><b>2019: </b>Customer Engineer at <span>Spaceboost</span></li>
-                <li><b>2019: </b>Web Developer at <span>Rica Design</span></li>
-                <li><b>2019: </b>Web Development Bootcamp at <span>IronHack</span></li>
-                <li><b>2019: </b>IronHack Hackshow winner with <span>Unpopular Opinion</span></li>
-                <li><b>2019: </b>IronHack Hackathon's most voted project with <span>Emergency Services</span></li>
-                <li><b>2016-2018: </b>CEO and Digital Expert at <span>Wixpers</span></li>
-                <li><b>2017: </b>1st Entrepreneur Woman Award at Emprèn UPC (Yuzz) with <span>WeSpo</span></li>
-                <!-- <li><b>2017: </b>3rd Emprèn UPC Award (Yuzz) with <span>WeSpo</span></li> -->
-                <li><b>2007 & 2008: </b>2nd position at <span>El Recorregut de l'Energia</span>, technological contest of the Generalitat de Catalunya</li>
-              </ul>
-            </div>
-            <div class="grey-bg">
-              <h3>Creative</h3>
-              <ul>
-                <li><b>2018: </b><i>Premi Extraordinari</i> by <span>Universitat de Barcelona</span></li>
-                <li><b>2016-2018: </b>From Creative Director to Marketing Director at <span>Rica Design</span></li>
-                <li><b>2016: </b>Graduated with honors in Advertising and Public Relations at <span>Universitat de Barcelona</span></li>
-                <li><b>2015: </b>Creative Marketing Content Specialist at <span>Subasta de Ocio (Udeo)</span></li>
-                <li><b>2015: </b>Public Relations Trainee <span>Mcann Erickson</span></li>
-                <li><b>2015: </b>Project Manager Assistant at <span>Dogwood</span></li>
-                <li><b>2014-2015: </b>Social Media Copywriter for Nissan at <span>Arista</span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+
       <section class="d-flex flex-row">
         <div class="knowledge cnt-pos flex-column">
           <h2>What I know</h2>
-          <h3 class="color-grey mb-3">I mean, what I'm coding in</h3>
+          <h3 class="color-grey mb-3">I mean, what I've coded Frontend with...</h3>
           <ul id="knowledge-list" class="d-flex flex-wrap">
             <li>HTML5 & CSS3</li>
             <li>Vanilla Javascript (ES5 & ES6)</li>
+            <li>Liquid</li>
             <li>React (with hooks)</li>
             <li>Vue</li>
             <li>Node</li>
-            <li>Express</li>
-            <li>Python</li>
-            <li>MobX</li>
-            <li>MongoDB</li>
-            <li>Serverless Applications (AWS)</li>
             <li>SASS</li>
           </ul>
-          <h3 class="color-grey mt-3 mb-3">and currently learning...</h3>
+          <h3 class="color-grey mt-3 mb-3">And for backend...</h3>
           <ul id="knowledge-list" class="d-flex flex-wrap">
-            <li>React Native</li>
-            <li>PHP</li>
+            <li>Express</li>
+            <li>Python</li>
+            <li>MongoDB</li>
+            <li>DynamoDB</li>
+            <li>Serverless Applications (AWS)</li>
           </ul>
         </div>
         <div class="ines-bg"></div>
       </section>
-      <footer class="cnt-pos flex-column header-bg">
+      
+      <footer class="cnt-pos flex-column background-black">
         <div class="container">
           <p class="header-des">I find the disruptiveness and scalability of the digital environment defiantly stimulating — A challenge to wake up to.</p>
           <div class="mt-4">
