ADD Arrow and knowledge list animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
         <h1 class="big-letters">I'm <a href="https://www.linkedin.com/in/inescv/" target="_blank">Ines Castelltort</a></h1>
         <p class="big-letters">Are you ready to <a href="#code">code along</a>?</p>
         <p class="medium-letters">You can always skip the stalking part and <a href="mailto:ines.today@gmail.com">ask to meet</a></p>
-        <a href="#code" class="scroll">&#8964;</a>
+        <a href="#code" class="scroll">
+          <div class="scroll-arrow">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+              <g id="Down-arrow">
+              <path d="M17.2929993,29.7070007c-0.3906994-0.3906002-0.3906994-1.0234013,0-1.4140015
+                c0.3906002-0.3906002,1.0234013-0.3906002,1.4140015,0L32,41.5858994l13.2929993-13.2929001
+                c0.3905983-0.3906002,1.0233994-0.3906002,1.4140015,0C46.902298,28.4883003,47,28.7441998,47,29
+                c0,0.2558994-0.097702,0.5116997-0.2929993,0.7070007l-14,14c-0.3906021,0.3906975-1.0234013,0.3906975-1.4140015,0
+                L17.2929993,29.7070007z"/>
+              <path d="M32,64c17.6730957,0,32-14.3269005,32-32S49.6730957,0,32,0C14.3268003,0,0,14.3268995,0,32S14.3268003,64,32,64z M32,62
+                C15.4579,62,2,48.542099,2,32C2,15.4580002,15.4579,2,32,2s30,13.4580002,30,30C62,48.542099,48.542099,62,32,62z"/>
+              </g>
+            </svg>
+          </div>
+        </a>  
       </header>
       <section id="code" class="code-structure">
         <div id="coding-lines" class="coding-lines"></div>
@@ -87,25 +102,25 @@
       </section>
 
       <section class="d-flex flex-row">
-        <div class="knowledge cnt-pos flex-column">
+        <div class="knowledge flex-column cnt-pos-desktop">
           <h2>What I know</h2>
           <h3 class="color-grey mb-3">I mean, what I've coded Frontend with...</h3>
-          <ul id="knowledge-list" class="d-flex flex-wrap">
-            <li>HTML5 & CSS3</li>
-            <li>Vanilla Javascript (ES5 & ES6)</li>
-            <li>Liquid</li>
-            <li>React (with hooks)</li>
-            <li>Vue</li>
-            <li>Node</li>
-            <li>SASS</li>
+          <ul id="knowledge-list" class="knowledge-list d-flex flex-wrap">
+            <li id="item-1" class="pop">HTML5 & CSS3</li>
+            <li id="item-2" class="pop">Vanilla Javascript (ES5 & ES6)</li>
+            <li id="item-3" class="pop">Liquid</li>
+            <li id="item-4" class="pop">React (with hooks)</li>
+            <li id="item-5" class="pop">Vue</li>
+            <li id="item-6" class="pop">Node</li>
+            <li id="item-7" class="pop">SASS</li>
           </ul>
-          <h3 class="color-grey mt-3 mb-3">And for backend...</h3>
-          <ul id="knowledge-list" class="d-flex flex-wrap">
-            <li>Express</li>
-            <li>Python</li>
-            <li>MongoDB</li>
-            <li>DynamoDB</li>
-            <li>Serverless Applications (AWS)</li>
+          <h3 class="color-grey mt-3 mb-3">And regarding Backend...</h3>
+          <ul id="knowledge-list-2" class="knowledge-list d-flex flex-wrap">
+            <li id="item-8" class="pop">Express</li>
+            <li id="item-9" class="pop">Python</li>
+            <li id="item-10" class="pop">MongoDB</li>
+            <li id="item-11" class="pop">DynamoDB</li>
+            <li id="item-12" class="pop">Serverless Applications (AWS)</li>
           </ul>
         </div>
         <div class="ines-bg"></div>
